RESOLVED FIXED96538
IndexedDB: Result of IDBFactory.deleteDatabase() should be undefined, not null
https://bugs.webkit.org/show_bug.cgi?id=96538
Summary IndexedDB: Result of IDBFactory.deleteDatabase() should be undefined, not null
Joshua Bell
Reported 2012-09-12 11:58:52 PDT
The spec http://dvcs.w3.org/hg/IndexedDB/raw-file/tip/Overview.html sayeth: deleteDatabase ... "If the steps above are successful, the implementation must set the result of the request to undefined..." Currently, in WebKit, we return null: void IDBDatabaseBackendImpl::deleteDatabase(PassRefPtr<IDBCallbacks> prpCallbacks) { ... callbacks->onSuccess(SerializedScriptValue::nullValue()); }
Attachments
Patch (5.43 KB, patch)
2012-09-12 13:01 PDT, Joshua Bell
no flags
Joshua Bell
Comment 1 2012-09-12 11:59:16 PDT
Joshua Bell
Comment 2 2012-09-12 13:01:28 PDT
Joshua Bell
Comment 3 2012-09-12 13:01:55 PDT
dgrogan@ - can you take a look?
David Grogan
Comment 4 2012-09-12 13:05:03 PDT
Comment on attachment 163675 [details] Patch LGTM
Joshua Bell
Comment 5 2012-09-12 13:12:18 PDT
easy one - tony@ - r? cq?
Joshua Bell
Comment 6 2012-09-17 09:19:46 PDT
tony@ r? cq?
WebKit Review Bot
Comment 7 2012-09-17 12:59:48 PDT
Comment on attachment 163675 [details] Patch Clearing flags on attachment: 163675 Committed r128795: <http://trac.webkit.org/changeset/128795>
WebKit Review Bot
Comment 8 2012-09-17 12:59:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.