IndexedDB: Result of IDBFactory.deleteDatabase() should be undefined, not null https://bugs.webkit.org/show_bug.cgi?id=96538

Reviewed by Tony Chang.

Source/WebCore:

Trivial implementation change to match the spec.

Tests: storage/indexeddb/factory-deletedatabase-expected.html
       storage/indexeddb/intversion-long-queue-expected.html

* Modules/indexeddb/IDBDatabaseBackendImpl.cpp:
(WebCore::IDBDatabaseBackendImpl::deleteDatabase):

LayoutTests:

Check result of IDBFactory.deleteDatabase() - one updated assertion, one added assertion.

* storage/indexeddb/factory-deletedatabase-expected.txt:
* storage/indexeddb/intversion-long-queue-expected.txt:
* storage/indexeddb/resources/factory-deletedatabase.js: Add new assertion.
(reopenDatabase):
* storage/indexeddb/resources/intversion-long-queue.js: Update existing assertion.
(deleteDatabaseSuccessCallback):


Canonical link: https://commits.webkit.org/114866@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128795 268f45cc-cd09-0410-ab3c-d52691b4dbfc